# Trade-Idiot-Analytic

./: .gitignore  AGENTS.md  PLAN.md  README.md  REFERENCES.md  build.bat  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: build.yml
backend/: .env.example  README.md  build_sidecar.py  main.py  requirements.txt  sidecar.spec
backend/app/: __init__.py  models.py
scripts/: gen-stocks-id.mjs  gen-stocks.mjs
src/: App.tsx  favorites.ts  format.ts  help.ts  indicators.ts  portfolio.test.ts  portfolio.ts  recommendations.ts  sectors.ts  settings.ts  stocks.data.ts  stocks.id.data.ts  stocks.ts  styles.css  suggestions.ts  types.ts  update.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri-updater.key.pub  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/api/: client.ts
src/components/: .gitkeep  BacktestPanel.tsx  BalancePositionChart.tsx  ChartPanel.tsx  CorrelationPanel.tsx  EquityChart.tsx  FundamentalsPanel.tsx  IndicatorControls.tsx  MarketMapPanel.tsx  MomentumPanel.tsx  OwnershipPanel.tsx  PatternPanel.tsx  PortfolioPanel.tsx  PriceSummary.tsx  RRGChart.tsx  RRGPanel.tsx  RecommendationsPanel.tsx  SettingsPanel.tsx  TickerInput.tsx  ui.tsx
tasks/: README.md  _template.md
tasks/backlog/: 001-frontend-scaffold.md  002-chart-panel.md  003-indicator-overlay.md  004-backtest-panel.md  005-tauri-shell.md  006-sidecar-packaging.md  012-data-provider-interface.md  013-backfill-historis-cache-sqlite.md  014-skor-piotroski-altman.md  015-momentum-multi-timeframe.md  (+5 more)
(+64 files in other folders)
